added basic markup to creae a website content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 
 </head>
 <body>
-	hello world
+	<div>
+		<img src="image/1.jpg" alt="profile image"/>
+		<h2>Gemala Wahyu Ningsih</h2>
+	</div>
+	
 </body>
 
 </html>
