--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-	<div>
+	<div id="profile-container">
 		<img src="image/1.jpg" alt="profile image"/>
 		<h2>Gemala Wahyu Ningsih</h2>
 	</div>
