--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
+	<center>
+	<div id="header" >
+    <p>Header</p>
+  </div>
 	<div id="profile-container">
 		<img src="image/1.jpg" alt="profile image"/>
 		<h2>Gemala Wahyu Ningsih</h2>
 	</div>
-	
+	<div id="footer" >
+    <p>Footer</p>
+  </div>
+	</center>
 </body>
 
 </html>
